# url-shortener

./: pyproject.toml
url_shortener/: manage.py
url_shortener/core/: admin.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py
url_shortener/core/migrations/: 0001_initial.py  0002_alter_shortenedurl_slug.py  0003_shortenedurl_created_at_shortenedurl_updated_at.py
url_shortener/url_shortener/: asgi.py  settings.py  urls.py  wsgi.py
